--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,15 @@
 title: Cosmos
+markdown: kramdown
+kramdown:
+  input: GFM
+
+sass:
+  style: :compressed
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+
+theme:
+  appearance:
+    - dark
