--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ blog:
 
 # Author info
 author:
-  fullname                  : zfx
+  fullname                  : shane.z
   rss                       : true # generate RSS feed and show it's icon in header
   mail                      : your@email.com # change to your e-mail address
   twitter                   : xxx
