feat(theme): customize

--- a/_config.yml
+++ b/_config.yml
@@ -1,174 +1,158 @@
-# Site settings 配置站点
+##------------------------------------------------------ 站点配置 -----------------------------------------------------##
+# baseurl:
+# 在服务器上建站时，如果你不需要子域名，请将这一格留空
+# 如果你在使用 GitHub Pages, 请将 baseurl 设置为你的网址的子域名
+# 例如，当你的域名是 "kaeyleo.github.io"  时，这个 url 需要留空
+# 但是，如果你创建了一个叫 "myblog" 的网站，此时网址会变成 "kaeyleo.github.io/myblog" ，这时再将 baseurl 设置为 '/myblog'
+
 title: 'Cosmos'
 description: '备忘录'
 keyword: 'memorandum'
 url: '' # your host
-
-# when build blog on server, if you don't need baseurl, you should leave this value blank.
-# 在服务器上建站时，如果你不需要子域名，请将这一格留空
-# if you're using GitHub Pages, set baseurl to your blog's .
-# 如果你在使用 GitHub Pages, 请将 baseurl 设置为你的网址的子域名
-# for example, if your site is "kaeyleo.github.io", then this url should leave blank.
-# 例如，当你的域名是 "kaeyleo.github.io"  时，这个 url 需要留空
-# but if your created a repo named "myblog", and the site is "kaeyleo.github.io/myblog", change baseurl to '/myblog'
-# 但是，如果你创建了一个叫 "myblog" 的网站，此时网址会变成 "kaeyleo.github.io/myblog" ，这时再将 baseurl 设置为 '/myblog'
 baseurl: ''
 theme: jekyll-theme-h2o-ac
+favicon: "/assets/image/favicon/favicon.ico"
 
-# Internalization 国际化
-languages: ["zh-Hans", "zh-Hant", "en", "ja"]
-default_lang: "zh-Hans"
+##------------------------------------------------------ 个人信息 -----------------------------------------------------##
+author: 'shane.z'
+nickname: 'shane.z'
+bio: '备忘录'
+avatar: '/assets/image/avadar/1.jfif'
+sns:
+  github: 'https://github.com/shane-zfx'
+  email: 'zffxxx7@gmail.com'
+  weibo: 'https://weibo.com/username'
 
-# PWA
-pwa:
-  color: '#81BBFF'
-  short_name: 'lisz'
+##------------------------------------------------------ 功能信息 -----------------------------------------------------##
+theme-color: default                                                      # 站点主题色，默认（蓝色，default）和粉色（pink）
+postPatters: 'circuitBoard'                                               # 页面封面默认模式，仅在未定义封面图时生效。支持 circuitBoard，overlappingCircles，food，glamorous，ticTacToe，seaOfClouds 五种
+nightMode: true                                                           # 夜间模式是否默认开启
+tos:                                                                      # 站点服务条款链接
+permalink: /:categories/:title.html                                       # 文章页自动生成规则
+mathjax: true                                                             # 是否开启 MathJax 公式支持
+RSS: true                                                                 # 是否开启 RSS 生成，robots.txt 和 sitemap.xml 文件。
+timezone: Asia/Shanghai                                                   # 默认时区
+formats:
+  time: 0                                                                 # 时间格式，0 -- 2022-04-29  1 -- 29 Apr 2022  2 -- 2022年4月29日
 
-# Navigation links
-nav:
+nav:                                                                      # 顶部导航栏，键值对定义显示名称与链接，可以是中文名（需使用引号）
   home: '/'
   blog: '/blog/index.html'
   archives: '/archives.html'
   tags: '/tags.html'
-  about:
-    logs: '/logs.html'
-    tos: '/tos.html'
-    RSS: '/feed.xml'
-    CV: '/cv.html'
-    links: '/links.html'
+  about: '/about.html'
 
-# Gray for the whole site 全站灰色
-gray: false
+links:                                                                    # 侧边栏配置，友情链接（侧边栏），键值对定义显示名称与链接，可以是中文名（需使用引号）。
+calendar: true                                                            # 是否开启文章发表日历（侧边栏与归档页）
+recommend-tags: true                                                      # 是否显示推荐便签
+recommend-condition-size: 12                                              # 显示推荐标签数量
 
-# Formats
-# 时间格式（Time format）：0 -- 2022-04-29    1 -- 29 Apr 2022   2 -- 2022年4月29日
-formats:
-  time: 0
+footer:                                                                   # 底部版权栏
+  since: 2024                                                             # 站点建站年份，用于显示版权起始时间。
+alivetime: true                                                           # 是否开启实时计算站点存活时间（底部）
+alivestart: "11/08/2024"                                                  # 站点建站年月日，用于实时计算站点存活时间。
+supports:                                                                 # 赞助商徽章
+  upyun: false
+  webify: false
+badges:                                                                   # 其他徽章
+  foreverblog: false
+  wormhole: false
+  travelling: false
+  notbyAI: true
+cclicense: true                                                           # 是否以 Creative Commons 协议共享文章内容版权
+beian: ''                                                                 # ICP 备案信息
 
-# Favicon
-favicon: "/favicon.ico"
+languages: [ 'zh-Hans', 'zh-Hant', 'en', 'ja' ]                           # 国际化语言支持列表
+default_lang: 'zh-Hans'                                                   # 默认语言
 
-# Footer
-footer:
-  since: 2015
+github:                                                                   # 文章最近更新时间自动更新
+  enabled: true                                                           # 是否开启
+  owner: shane-zfx
+  repository: shane-zfx.github.io                                         # 项目名
 
-# Author 配置博主信息
-author: 'zhonger'
-nickname: 'zhonger'
-bio: '全栈开发者，热爱前端、运维和架构设计'
-avatar: '/assets/img/profile.webp'
+toc: true                                                                 # 是否开启文章页目录导航
+social-share: true                                                        # 是否开启社交分享
+social-share-items: [ 'wechat', 'weibo', 'douban', 'twitter' ]            # 社交分享列表
 
-# Search
-search: true
-
-# Night mode
-nightMode: false
-
-# Comments 评论功能
-comments:
-  disqus: false
-  disqus_url: 'https://liaokeyu.disqus.com/embed.js'
-  waline: false
-  waline_url: 'https://h2o-ac-waline.vercel.app'
-
-# MathJax 公式支持 by Ray-Eldath
-mathjax: true
-
-# Share
-social-share: true
-social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
-
-# theme color 主题皮肤
-theme-color: 'default'  # pink or default
-
-# Post header background patterns (when the post no cover): circuitBoard, overlappingCircles, food, glamorous, ticTacToe, seaOfClouds
-postPatterns: 'circuitBoard'
-
-# SNS settings 配置社交网站
-# url: email, weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
-sns:
-  google-scholar: 'https://scholar.google.com/citations?user=AUupIooAAAAJ'
-  researchgate: 'https://www.researchgate.net/profile/Shengzhou-Li'
-  ORCID: 'https://orcid.org/0000-0001-6973-3825'
-  github: 'https://github.com/zhonger'
-  linkedin: 'https://www.linkedin.com/in/shengzhouli/'
-  segmentfault: 'https://segmentfault.com/u/wuwozhonger'
-
-# Links 友情链接
-links:
-  'Mr Li': 'https://lisz.me'
-
-# Beian 备案号
-beian: '沪ICP备xxxxxxxx号'
-
-# CC License
-cclicense: true
-
-# CNZZ Analytics
-# cnzz: 1234567891
-cnzz:
-
-# Busuanzi Analytics
-busuanzi: true
-
-# Umami Analytics
-umami:
-  status:
-  id:
-  js:
-
-# Google Analytics
-# google_analytics: UA-XXXXXXXXX-X
-google_analytics:
-
-# Google Search
-google_search:
-
-# Tags 设置标签
-recommend-tags: true # whether or not display recommend-tags on the sidebar
-recommend-condition-size: 12 # a tag will be recommended if the size of it is more than this value
-
-# Build settings
-pagination:
-  enabled: true
-  per_page: 10
-# paginate: 10
-# paginate_path: 'blog/page:num'
-
-# Markdown
-markdown: kramdown
-highlighter: rouge
-kramdown:
+markdown: kramdown                                                        # Markdown 语法解析器
+kramdown:                                                                 # Markdown 语法解析器配置
   input: GFM
-prism:
-  theme:
-  line_numbers: true
+highlighter: rouge                                                        # 代码高亮解析器
+prism:                                                                    # 代码高亮主题配置节
+  theme: one-light                                                        # 代码高亮主题，支持所有官方主题
+  line_numbers: true                                                      # 是否开启代码行号
+mermaid: true                                                             # 是否开启代码流程图支持，可以根据符合 mermaid 语法的代码画图
 
-# RSS
-RSS: true
+extlinks:                                                                 # 区分站内链接与站外链接
+  attributes: { rel: nofollow, target: _blank, class: extlinks }          # 站外链接配置
+  rel_exclude: [ 'host1.com', 'host2.net' ]                               # 可以被认为是站内链接的多域名配置
 
-# Permalink
-# See: https://github.com/kaeyleo/jekyll-theme-H2O/issues/35
-permalink: /:categories/:title.html
+premonition:                                                              # 支持五种提示框，note、info、warning、error、citation。
+  default:                                                                # 一般采用默认配置即可，无须自定义修改。
+    template: '<div class="premonition {{type}}">
+          <div class="header">
+            <svg class="icon {{type}}" aria-hidden="true">
+                <use xlink:href="#icon-{{type}}"></use>
+            </svg>
+            <div class="title"> {{title}} </div>
+          </div>
+          <div class="content">
+            {{content}}
+          </div>
+        </div>'
+  types:
+    citation:
+      template: '<div class="premonition {{type}}">
+          <div class="header">
+            <svg class="icon {{type}}" aria-hidden="true">
+                <use xlink:href="#icon-{{type}}"></use>
+            </svg>     
+          </div>
+          <div class="content">
+            {{content}}
+          </div>
+          {% if title %}<div class="ref"> ------ {{title}} </div>{% endif %}
+        </div>'
+      default_title: ''
+    note:
+      default_title: 'Note'
+    info:
+      default_title: 'Info'
+    warning:
+      default_title: 'Warning'
+    error:
+      default_title: 'Error'
+plugins: [ jekyll-paginate-v2, jekyll-feed, jekyll-sitemap, premonition, h2o-ac-jekyll-extlinks ]
+exclude: [ 'node_modules', 'dev', 'package.json', 'webpack.config.js', '.gitignore', 'README.md', '*.gemspec', '*.gem' ]
 
-# TOC
-toc: true
 
-# Mermaid
-mermaid: true
+webpusher: '{GIVEN WEBPUSHER ID}'                                         # 动态消息、通知推送，定义时自动开启。
 
-# Webpusher
-webpusher: false
+pwa:
+  color: '#81BBFF'                                                        # 主题色
+  short_name: 'cosmos'                                                    # 应用缩写或应用名
 
-# Foreverblog
-foreverblog: true
+search: true                                                              # 是否启用搜索
+search_type: docsearch                                                    # 默认为 default 即简单搜索，自 v1.3.2 后可用 DocSearch 搜索。
+docsearch:                                                                # DocSearch 搜索配置节
+  appId: '{GIVEN APPID}'                                                  # 获取的应用 ID
+  apiKey: '{GIVEN API KEY}'                                               # 获取的应用 Key
+  indexName: 'indexName'                                                  # 获取的索引空间名
 
-# Wormhole
-wormhole: true
 
-# NotByAI
-notbyAI: true
+comments:                                                                 # 评论功能
+  disqus: true                                                            # 是否开启 Disqus 评论
+  disqus_url: 'https://h2o-ac.disqus.com/embed.js'                        # Disqus 链接
+  waline: true                                                            # 是否开启 Waline 评论
+  waline_url: 'https://h2o-ac-waline.deta.dev/'                           # Waline 链接
+  waline_reaction: true                                                   # 是否开启 Waline 表情反馈，以下为自定义本地化配置。
+  waline_locale: "{reaction0: '赞一个', reaction1: '踩一下', reaction2: '有点酷', reaction3: '看不懂', reaction4: '啥玩意', reaction5: '想睡觉'}"
 
-# Alive time
-alivetime: true
-alivestart: "12/23/2021"
+cnzz: '111111111'                                                         # 站点统计功能 CNZZ 站长统计
+busuanzi: true                                                            # Busuanzi 不蒜子统计
+google_analytics: 'UA-111111111-1'                                        # 谷歌统计分析
+google_search: '{GIVEN LONG STRING}'                                      # 谷歌搜索验证所有权
+umami:                                                                    # Umami 统计
+  status: true
+  id: '{Umami ID}'
+  js: 'https://umami.jekyll-theme-h2o-ac.com/umami.js'
