--- a/_config.yml
+++ b/_config.yml
@@ -134,8 +134,8 @@ pwa:
 search: true                                                              # 是否启用搜索
 search_type: docsearch                                                    # 默认为 default 即简单搜索，自 v1.3.2 后可用 DocSearch 搜索。
 docsearch:                                                                # DocSearch 搜索配置节
-  appId: '{GIVEN APPID}'                                                  # 获取的应用 ID
-  apiKey: '{GIVEN API KEY}'                                               # 获取的应用 Key
+  appId: 'AH3DA24C7J'                                                     # 获取的应用 ID
+  apiKey: '67e5ce7e7b2f07af1a473906ddf115a5'                              # 获取的应用 Key
   indexName: 'indexName'                                                  # 获取的索引空间名
 
 
